--- a/frontend/src/app/components/success-page/success-page.component.html
+++ b/frontend/src/app/components/success-page/success-page.component.html
@@ -1,4 +1,4 @@
-<div class="container-xxl py-5">
+<!-- <div class="container-xxl py-5">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6">
@@ -9,7 +9,7 @@
             <i class="fas fa-check-circle text-success mb-4" style="font-size: 5rem;"></i>
           </div>
 
-          <!-- Message -->
+          Message
           <div class="alert alert-success text-center">
             <p>{{ successMessage }}</p>
           </div>
@@ -23,4 +23,8 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+
+<!-- Particules Background -->
+<app-particules></app-particules>
