--- a/frontend/src/app/components/backup/backup.component.html
+++ b/frontend/src/app/components/backup/backup.component.html
@@ -1,3 +1,7 @@
+<!-- Navbar -->
+<app-navbar></app-navbar>
+
+
 <div class="container-xxl py-5">
   <div class="container">
     <h2 class="display-6 text-center text-danger mb-4">RMAN Backups Management</h2>
