--- a/frontend/src/app/components/shared/particules/particules.component.html
+++ b/frontend/src/app/components/shared/particules/particules.component.html
@@ -1,7 +1,8 @@
-<div id="tsparticles-container">
-  <tsparticles
+<div id="particles-container">
+  <ng-particles
     [id]="id"
     [options]="particlesOptions"
-    (particlesInit)="particlesInit($event)">
-  </tsparticles>
+    [particlesInit]="particlesInit"
+    (particlesLoaded)="particlesLoaded($event)">
+  </ng-particles>
 </div>
