fix: navbar to optimization and backup

--- a/frontend/src/app/components/backup/backup.component.html
+++ b/frontend/src/app/components/backup/backup.component.html
@@ -1,8 +1,6 @@
-<!-- Navbar -->
-<app-navbar></app-navbar>
-
-
-<div class="container-xxl py-5">
+<div class="body">
+  <app-navbar></app-navbar>
+  <div class="container-xxl py-5">
   <div class="container">
     <h2 class="display-6 text-center text-danger mb-4">RMAN Backups Management</h2>
 
@@ -73,4 +71,5 @@
       <p>No backups found.</p>
     </div>
   </div>
+</div>
 </div>
