--- a/frontend/src/app/components/optimization/optimization.component.html
+++ b/frontend/src/app/components/optimization/optimization.component.html
@@ -1,18 +1,22 @@
-<div class="container-xxl py-5">
+<div class="body">
+  <app-navbar></app-navbar>
+  <div class="container-xxl py-5">
+
   <div class="container">
     <h2 class="display-6 text-center text-danger mb-4">Optimization Page</h2>
 
-    <!-- Bouton Refresh pour charger les requêtes lentes -->
+    <!-- Bouton Refresh pour charger les requêtes lentes avec icône -->
     <div class="d-flex justify-content-between align-items-center mb-4">
       <button
         class="btn btn-sm btn-outline-danger"
         (click)="loadSlowQueries()"
       >
-        Refresh
+        <i class="fas fa-sync"></i> <!-- Icône de rafraîchissement -->
       </button>
-      <input type="text" id="searchQuery"  placeholder="Search Query or ID..."
+      <input type="text" id="searchQuery" placeholder="Search Query or ID..."
              [(ngModel)]="searchText" (input)="searchQueries()"/>
     </div>
+
 
     <!-- Tableau des requêtes lentes, affiché uniquement  après avoir cliqué sur "Refresh" -->
     <div *ngIf="slowQueries.length > 0">
@@ -22,7 +26,7 @@
           <th scope="col">SQL ID</th>
           <th scope="col">Query</th>
           <th scope="col">Execution Time (ms)</th>
-          <th scope="col">Status</th>
+          <th scope="col">Number of executions</th>
           <th scope="col">Actions</th>
         </tr>
         </thead>
@@ -51,13 +55,13 @@
         </button>
       </div>
       <div class="d-flex justify-content-center mt-2">
-        <button
-          *ngFor="let page of getPageNumbers()"
-          class="btn btn-sm"
-          [ngClass]="{'btn-danger': currentPage === page, 'btn-outline-secondary': currentPage !== page}"
-          (click)="goToPage(page)">
-          {{ page }}
-        </button>
+        <div class="pagination-buttons">
+          <button *ngFor="let page of getPageNumbers()"
+                  [class.active]="page === currentPage"
+                  (click)="goToPage(page)">
+            {{ page }}
+          </button>
+        </div>
       </div>
     </div>
 
@@ -76,4 +80,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
