--- a/frontend/src/app/components/shared/particules-dash/particules-dash.component.html
+++ b/frontend/src/app/components/shared/particules-dash/particules-dash.component.html
@@ -2,6 +2,7 @@
   <ngx-particles
     [id]="id"
     [options]="particlesOptions"
+    [particlesInit]="particlesInit"
     (particlesLoaded)="particlesLoaded($event)">
   </ngx-particles>
 </div>
