--- a/frontend/src/app/components/home-layout-component/home-layout-component.component.html
+++ b/frontend/src/app/components/home-layout-component/home-layout-component.component.html
@@ -57,8 +57,11 @@
 <!-- Carousel End -->
 
 <!-- About Start -->
+
 <div class="container-xxl py-5">
+
   <div class="container">
+    <app-particules></app-particules>
     <div class="row g-4 align-items-end mb-4">
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
         <img class="img-fluid rounded" src="assets/img/oracle-logo.png" alt="Oracle DBA Platform">
