update: optimization function name and fetching only backup

--- a/frontend/src/app/components/optimization/optimization.component.html
+++ b/frontend/src/app/components/optimization/optimization.component.html
@@ -38,7 +38,7 @@
           <td>{{ query.executions }}</td>
           <td>
             <button class="btn btn-sm btn-success" (click)="optimizeQuery(query.sql_id)">
-              <i class="bi bi-gear"></i> Tune
+              <i class="bi bi-gear-fill"></i> Tune
             </button>
           </td>
         </tr>
