--- a/frontend/src/app/components/resource-usage/resource-usage.component.html
+++ b/frontend/src/app/components/resource-usage/resource-usage.component.html
@@ -7,18 +7,33 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <h4>
-         Performance Dashboard  <i class="fas fa-tachometer-alt"></i>
+        <i class="fas fa-tachometer-alt me-2"></i> Performance Dashboard
       </h4>
       <nav>
         <ul>
-          <li><a href="/Performance-Dash">Real-Time Stats <i class="fas fa-chart-line"></i> </a></li>
-          <li><a id="active" href="/Resource-Usage"> Resource Usage <i class="fas fa-server"></i></a></li>
-          <li><a href="/ASH-Report">ASH Report  <i class="fas fa-database"></i> </a></li>
-          <li><a href="/Awr-report"> AWR Report  <i class="fas fa-file-alt"></i></a></li>
+          <li>
+            <a href="/Performance-Dash">
+              <i class="fas fa-chart-line me-2"></i> Real-Time Stats
+            </a>
+          </li>
+          <li>
+            <a id="active" href="/Resource-Usage">
+              <i class="fas fa-server me-2"></i> Resource Usage
+            </a>
+          </li>
+          <li>
+            <a href="/ASH-Report">
+              <i class="fas fa-database me-2"></i> ASH Report
+            </a>
+          </li>
+          <li>
+            <a  href="/Awr-report">
+              <i class="fas fa-file-alt me-2"></i> AWR Report
+            </a>
+          </li>
         </ul>
       </nav>
     </aside>
-
     <!-- Main Content -->
     <main class="content">
 
