--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -19,7 +19,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="#" class="nav-itemSP nav-link active">Admin </a>
+        <a href="/admin-dashboard" class="nav-itemSP nav-link active">Admin </a>
         <a href="#about" class="nav-item nav-link">About</a>
         <a href="#services" class="nav-item nav-link">Services</a>
         <a href="#contact" class="nav-item nav-link">Contact</a>
