--- a/frontend/src/app/components/delete-user-page/delete-user-page.component.html
+++ b/frontend/src/app/components/delete-user-page/delete-user-page.component.html
@@ -6,7 +6,46 @@
   </div>
 
 
-
+<!-- Sidebar -->
+<aside class="sidebar">
+  <h4>
+    <i class="fas fa-users-cog me-2"></i> Users Management
+  </h4>
+  <nav>
+    <ul>
+      <li>
+        <a  href="/create-user">
+          <i class="fas fa-user-plus me-2"></i> Create User
+        </a>
+      </li>
+      <li>
+        <a href="/update-user">
+          <i class="fas fa-user-edit me-2"></i> Update User
+        </a>
+      </li>
+      <li>
+        <a id="active" href="/delete-user">
+          <i class="fas fa-user-times me-2"></i> Delete User
+        </a>
+      </li>
+      <li>
+        <a href="/asign-role">
+          <i class="fas fa-user-tag me-2"></i> Assign Role
+        </a>
+      </li>
+      <li>
+        <a href="/Set-Quota">
+          <i class="fas fa-wallet me-2"></i> Set Quota
+        </a>
+      </li>
+      <li>
+        <a href="/create-tablespace">
+          <i class="fas fa-database me-2"></i> Tablespace
+        </a>
+      </li>
+    </ul>
+  </nav>
+</aside>
 
 <div class="container-xxl py-5">
   <div class="container">
